avoid using jdk.compiler module stuff